--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,7 @@ body{
     margin: 0;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .container{
@@ -24,8 +25,27 @@ body{
     color: white;
     width: 100%;
     height: 150px;
-    font-size: 5em;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 50px 0px 50px;
+}
+.num {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 15px;
+    border: 1px .5px 1px .5px solid gray ;
+    border-radius: 10%;
+    background: rgb(41, 40, 40);
+    height: 125px;
+    width: 100px;
+    align-items: center;
+    font-size: 75px;
+    
+    
+}
+.icon {
+    width: 125px;
 }
